// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseButton /> should render button of type "reset" 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="reset"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button of type "submit" 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="submit"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with default properties 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with full width 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 fFXCWH"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with default iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <svg
      fill="none"
      height="20px"
      viewBox="0 0 24 24"
      width="20px"
    >
      <path
        clip-rule="evenodd"
        d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
        fill="hsla(0, 0%, 100%, 1)"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 jUWOHQ"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with left iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <svg
      fill="none"
      height="20px"
      viewBox="0 0 24 24"
      width="20px"
    >
      <path
        clip-rule="evenodd"
        d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
        fill="hsla(0, 0%, 100%, 1)"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 jUWOHQ"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with right iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 dwFBFI"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
    <svg
      fill="none"
      height="20px"
      viewBox="0 0 24 24"
      width="20px"
    >
      <path
        clip-rule="evenodd"
        d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
        fill="hsla(0, 0%, 100%, 1)"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon without text 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <svg
      fill="none"
      height="20px"
      viewBox="0 0 24 24"
      width="20px"
    >
      <path
        clip-rule="evenodd"
        d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
        fill="hsla(0, 0%, 100%, 1)"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 eDAyjT"
    color="hsla(216, 19%, 89%, 1)"
    disabled=""
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 ewrIpg BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(216, 16%, 60%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render large size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 gXAlms"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 hvBMXx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="1rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render medium size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kPhGcs"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 20px 0px 20px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 faquWx BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.875rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render small size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kybnjB"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 12px 0px 12px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 iFjPgh BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.75rem"
      font-style="normal"
      font-weight="700"
    >
      Pay Now
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render xsmall size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hiKASK"
    color="hsla(213, 89%, 56%, 1)"
    spacing="0px 8px 0px 8px"
    type="button"
  >
    <div
      class="StyledBaseTextweb__StyledBaseText-sc-1t5p7u8-0 iFjPgh BaseButton__StyledBaseText-zf1huq-0 cFreCU"
      color="hsla(0, 0%, 100%, 1)"
      font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
      font-size="0.75rem"
      font-style="normal"
      font-weight="700"
    >
      PAY NOW
    </div>
  </button>
</div>
`;
